# Baltic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
src/: baltic_except.h  debug_layer.h  main.cpp  win_include.h
src/auxiliary/: baltic_except.h  baltic_exception.h  baltic_exception.hpp  camera.hpp  constants.h  constants.hpp  control_panel.hpp  dx_window.cpp  dx_window.h  input_layouts.h  pch.h  pch.hpp  shader.cpp  shader.h  types.h  types.hpp  win_include.h
src/d3d/: buffers.cpp  buffers.h  dx_context.cpp  dx_context.h  dx_context.hpp  dx_resource.cpp  dx_resource.h  dx_resource.hpp  dx_window.cpp  dx_window.h  dx_window.hpp  pipeline_state.cpp  pipeline_state.h  shader.cpp  shader.h  shader.hpp
src/debug/: dx_debug_layer.h  dx_debug_layer.hpp
src/gui/: imgui_layer.cpp  imgui_layer.hpp
src/imgui/: control_panel.hpp  gui.cpp  gui.hpp  gui_context.cpp  gui_context.hpp  imgui_layer.cpp  imgui_layer.hpp
src/shaders/: geometry_shader.hlsl  pixel_shader.hlsl  root_signature.hlsli  structs.hlsli  vertex_shader.hlsl
